2015-11-07  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_set_status): Add special case for FSTATUS.
	* epiphany-sim.h: Update prototype for epiphanybf_set_status.

2015-11-05  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphany_gie): Detect and handle GIE/IDLE instruction
	pair as hardware = delay interrupts handling by one insn.
	* mloop.in (full-exec-scache): If after handling OOB events emitted by
	current instruction, there is still an event in the slot, delay
	handling external register writes until after next insn.
	* oob-events.h (oob_event_t): Add OOB_EVT_INTERRUPT_DELAYED.
	* oob-events.c (epiphany_handle_oob_events): Handle
	OOB_EVT_INTERRUPT_DELAYED.

2015-11-05  Ola Jeppsson  <ola@adapteva.com>

	* traps.c (epiphany_rti): If the core was idle because
	of an 'idle' instruction, adjust return address to the next
	instruction.

2015-11-03  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Return with simulator error code. Don't
	print successful exit status unless --verbose is toggled.

2015-11-03  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_tx_one_shm_mmr): Fix bug that caused EINVAL on
	all writes to the mmr region.

2015-11-03  Ola Jeppsson  <ola@adapteva.com>

	* sim-main.h: Add long64 and ulong64 typedefs.
	* dv-epiphany_mem.c (epiphany_mem_finish): Use ULL rather than UL for
	64-bit literals.
	(epiphany_mem_signal): Cast to ulong64 when printing address and size.
	(epiphany_mem_io_read_buffer): Likewise.
	(epiphany_mem_io_write_buffer): Likewise.
	* epiphany.c (epiphany_halt_on_inactive): Likewise.
	* esim/esim.c (es_validate_cluster_cfg): Use ULL rather than UL for
	64-bit literals.
	(es_dump_config): Cast to ulong64 when printing address and size.
	* oob-events.c (halt_on_excause): Likewise.
	(halt_on_interrupt): Likewise.
	* sim-if.c (epiphany_option_handler): Use long long type for parsing
	64-bit values.
	* traps.c (sim_engine_invalid_insn): Cast to ulong64 when printing
	address and size.
